make migration for all tables and make notification using whatsapp, sms, and email

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,13 @@
-APP_NAME=Laravel
+APP_NAME=KorlantasPolri
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:RFofpp4eqZR4v4yxo+bg7EofadQ0cwnuLcacELUciQU=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
+
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
@@ -20,12 +21,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=e_tilang
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=e_tilang
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -63,3 +64,20 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# config for email with smtp
+MAIL_MAILER=smtp
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=7b6ef96c671d58
+MAIL_PASSWORD=7aedab6c02643d
+
+# cofig for whatsapp with twilio
+
+TWILIO_SID=ACf44e4e97cb0df5192479f981839aa54d
+TWILIO_AUTH_TOKEN=49cc9cbfbbda7678c12b81ee0a77005a
+TWILIO_WHATSAPP_FROM=whatsapp:+14155238886
+
+# config API for SMS8.io / SMS GATEWAY
+SMS8_API_KEY=887b9d7d635a452e139fa8e5cfe02877a36a3896
+SMS8_DEVICES=2061
