--- a/.env.example
+++ b/.env.example
@@ -25,8 +25,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=e_tilang
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=sql_api_cenawith
+DB_PASSWORD=ce47793a515d5
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -72,12 +72,15 @@ MAIL_PORT=2525
 MAIL_USERNAME=7b6ef96c671d58
 MAIL_PASSWORD=7aedab6c02643d
 
-# cofig for whatsapp with twilio
+# config for whatsapp with twilio
 
 TWILIO_SID=ACf44e4e97cb0df5192479f981839aa54d
 TWILIO_AUTH_TOKEN=49cc9cbfbbda7678c12b81ee0a77005a
 TWILIO_WHATSAPP_FROM=whatsapp:+14155238886
 
 # config API for SMS8.io / SMS GATEWAY
-SMS8_API_KEY=887b9d7d635a452e139fa8e5cfe02877a36a3896
-SMS8_DEVICES=2061
+SMS8_API_KEY=2f80fbfbac634184f74324dae03fb61cdd93e98e
+SMS8_DEVICES=2615
+
+# config for send whatsapp with fonnte as Whatsapp gateway
+FONNTE_TOKEN=KDWELbeaThMizftM5oYz
