--- a/.env.example
+++ b/.env.example
@@ -25,8 +25,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=e_tilang
-DB_USERNAME=sql_api_cenawith
-DB_PASSWORD=ce47793a515d5
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
