Memperbarui konfigurasi email pada .env.example untuk menggunakan token baru untuk Whatsapp dan menghapus pengaturan lama.

--- a/.env.example
+++ b/.env.example
@@ -48,15 +48,6 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
-
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
@@ -67,10 +58,14 @@ VITE_APP_NAME="${APP_NAME}"
 
 # config for email with smtp
 MAIL_MAILER=smtp
-MAIL_HOST=sandbox.smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=7b6ef96c671d58
-MAIL_PASSWORD=7aedab6c02643d
+MAIL_SCHEME=null
+MAIL_HOST=smtp.hostinger.com
+MAIL_PORT=465
+MAIL_ENCRYPTION=ssl
+MAIL_USERNAME=mail@etilang.web.id
+MAIL_PASSWORD=Echall@n111
+MAIL_FROM_ADDRESS="mail@etilang.web.id"
+MAIL_FROM_NAME="${APP_NAME}"
 
 # config for whatsapp with twilio
 
@@ -83,4 +78,5 @@ SMS8_API_KEY=2f80fbfbac634184f74324dae03fb61cdd93e98e
 SMS8_DEVICES=2615
 
 # config for send whatsapp with fonnte as Whatsapp gateway
-FONNTE_TOKEN=KDWELbeaThMizftM5oYz
+FONNTE_TOKEN=P3AaJxCk89hFWNmGk5BQ
+
